removed contact and added projects page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="projects.html">Projects</a></li>
     </ul>
   </nav>
   <button id="theme-toggle" class="theme-toggle">🌙</button>
@@ -29,13 +29,13 @@
       <h1>Hi, I'm Harry Deane</h1>
       <p>Game Developer specializing in C# and Unity</p>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/your-profile" target="_blank" class="social-btn">
+        <a href="https://www.linkedin.com/in/harry-deane-974a24307" target="_blank" class="social-btn">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://discord.com/users/your-discord-id" target="_blank" class="social-btn">
+        <a href="https://discord.com/users/hdeane18#5230" target="_blank" class="social-btn">
           <i class="fab fa-discord"></i>
         </a>
-        <a href="https://www.youtube.com/your-channel" target="_blank" class="social-btn">
+        <a href="https://www.youtube.com/@harrydeaneplym" target="_blank" class="social-btn">
           <i class="fab fa-youtube"></i>
         </a>
       </div>
@@ -81,6 +81,12 @@
       </div>
     </div>
   </section>
+  
+  <section class="cv">
+  <h2>My CV</h2>
+  <p>Download my CV to learn more about my skills and experience.</p>
+  <a href="assets/cv.pdf" download="Harry_Deane_CV.pdf" class="btn">Download CV</a>
+</section>
 
   <footer>
     <p>&copy; 2025 Harry Deane. All rights reserved.</p>
