--- a/group-project1.html
+++ b/group-project1.html
@@ -3,40 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Group Project 1 - Harry Deane</title>
-  <link rel="stylesheet" href="../styles/style.css">
+  <title>Guard Duty - Harry Deane</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../projects.html">Projects</a></li>
-      </ul>
-    </nav>
-    <button id="theme-toggle" class="theme-toggle">🌙</button>
-  </header>
+  <nav>
+  <!-- Profile Picture and Name -->
+    <div class="profilenav">
+      <img src="assets/profile.jpeg" alt="Harry Deane" class="profilenav-img">
+      <span class="profilenav-name">Harry Deane</span>
+    </div>
+	<div class="nav-container">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+    </ul>
+	</div>
+  </nav>
+  <button id="theme-toggle" class="theme-toggle">🌙</button>
+</header>
 
   <section class="project-details">
-    <h1>Group Project 1</h1>
-    <img src="../assets/group-project1.jpg" alt="Group Project 1 Screenshot" class="project-img">
+    <h1>Guard Duty</h1>
+    <img src="assets/group-project1.png" alt="Guard Duty Screenshot" class="project-img">
     <p>
-      A detailed description of the project, including your role, contributions, technologies used,
-      and any challenges you overcame. You can also include links to the project repository or demo.
+      Guard Duty is a 3D stealth game developed in Unity. The player takes on the role of a theif and must steal as much gold as possible without alerting the guards. Players have special gadgets to help them become the ultimate theif.
     </p>
+    <h3>My Role</h3>
+    <p>
+  As the <strong>Project Manager</strong> for Guard Duty, I was responsible for organizing and overseeing the development process. This included:
+</p>
+<ul>
+  <li>Planning and managing <strong>sprints</strong> to ensure timely delivery of features.</li>
+  <li>Creating and maintaining the <strong>release schedule</strong> to keep the team on track.</li>
+  <li>Facilitating communication between team members to resolve blockers and ensure smooth collaboration.</li>
+</ul>
+<p>
+  In addition to my managerial responsibilities, I implemented the <strong>multiplayer functionality</strong> using <strong>Mirror Networking</strong>. This involved:
+</p>
+<ul>
+  <li>Setting up the networking architecture to support real-time multiplayer gameplay.</li>
+  <li>Synchronizing player movements, interactions, and game states across multiple clients.</li>
+  <li>Optimizing network performance to ensure a smooth and responsive experience for all players.</li>
+</ul>
+<p>
+  My contributions helped deliver a polished and engaging multiplayer experience, while ensuring the project stayed on schedule and met its milestones.
+</p>
     <h3>Technologies Used</h3>
     <ul>
       <li>Unity</li>
       <li>C#</li>
       <li>Git</li>
+      <li>Blender (for asset creation)</li>
     </ul>
-    <a href="../projects.html" class="btn">Back to Projects</a>
+
+    <!-- Image Gallery -->
+    <div class="image-gallery">
+      <h3>Screenshots</h3>
+      <div class="gallery-grid">
+        <img src="assets/group-project1-1.png" alt="Screenshot 1" class="gallery-img">
+        <img src="assets/group-project1-2.png" alt="Screenshot 2" class="gallery-img">
+        <img src="assets/group-project1-3.png" alt="Screenshot 3" class="gallery-img">
+      </div>
+    </div>
+
+    <!-- Links Section -->
+    <div class="project-links">
+      <h3>Links</h3>
+      <div class="links-grid">
+        <a href="https://github.com/TheBulletKin/Guard-Duty" target="_blank" class="btn">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+        <a href="https://www.youtube.com/@Guard_Duty" target="_blank" class="btn">
+          <i class="fab fa-youtube"></i> YouTube
+        </a>
+        <a href="https://playguardduty.wordpress.com/" target="_blank" class="btn">
+          <i class="fas fa-globe"></i> Website
+        </a>
+      </div>
+    </div>
+
+    <a href="projects.html" class="btn">Back to Projects</a>
   </section>
 
   <footer>
     <p>&copy; 2025 Harry Deane. All rights reserved.</p>
   </footer>
 
-  <script src="../scripts/main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
