--- a/project2.html
+++ b/project2.html
@@ -9,10 +9,17 @@
 <body>
   <header>
   <nav>
+  <!-- Profile Picture and Name -->
+    <div class="profilenav">
+      <img src="assets/profile.jpeg" alt="Harry Deane" class="profilenav-img">
+      <span class="profilenav-name">Harry Deane</span>
+    </div>
+	<div class="nav-container">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
     </ul>
+	</div>
   </nav>
   <button id="theme-toggle" class="theme-toggle">🌙</button>
 </header>
